# mujoco-web

./: .env.example  .gitignore  BACKEND_STATUS.md  CLAUDE.md  FRONTEND_STATUS.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
WORKSPACE/: 00_PROJECT.md  ROADMAP.md
WORKSPACE/ARCHITECTURE/: ADR_001-Plugin_Architecture.md  ADR_001-Server_Side_Execution.md  ADR_002-Database_Schema.md  ADR_003-VLA_Server_Separation.md
WORKSPACE/FEATURES/: 001_MVP.md  001_VLA_VISUALIZATION.md  002_MODEL_COMPARISON.md  002_VLA_Server.md  003_MuJoCo_WASM_Viewer.md  README.md
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  185323a1d7b8_use_timezone_aware_timestamps.py  92005f75b0c0_refactor_rename_index_in_session_to_seq_.py  b1c5dfd43f55_add_sessions_battles_votes_tables.py  b3a87a3d54ec_vla_arena_mvp_schema.py  d7e4e8fa91aa_change_session_user_id_from_int_to_.py
backend/src/vlaarena_backend/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/src/vlaarena_backend/api/: __init__.py  battles.py  episodes.py  leaderboard.py  models.py  sessions.py  votes.py
backend/src/vlaarena_backend/repositories/: __init__.py  base.py  battle_repository.py  episode_repository.py  model_stats_repository.py  session_repository.py  vote_repository.py
backend/src/vlaarena_backend/services/: __init__.py  episode_service.py  leaderboard_service.py  llm_client.py  model_service.py  model_xml_service.py  session_service.py  turn_service.py  vla_client.py  vla_service.py  votes_service.py
backend/tests/: conftest.py  test_backend_main.py  test_battles_api.py  test_config.py  test_episode_repository.py  test_episodes_api.py  test_leaderboard_api.py  test_leaderboard_service.py  test_model_stats_repository.py  test_models_api.py  test_session_service.py  test_sessions_api.py  test_sessions_api_vla.py  test_turns_api.py  test_vla_client.py  test_vla_service.py  test_votes_api.py  test_votes_service.py
config/: models.yaml
config/mujoco/: template.xml
config/mujoco/robots/: franka.xml
config/mujoco/scenes/: table.xml
frontend/: .dockerignore  Dockerfile  LICENSE  NOTICE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/app/battle/: _types.ts  battle-client.tsx  page.tsx  service.ts
frontend/app/leaderboard/: _types.ts  leaderboard-client.tsx  page.tsx  service.ts  use-leaderboard.ts
frontend/components/: mobile-sidebar.tsx  mujoco-viewer.tsx  sidebar.tsx  theme-toggle.tsx
frontend/components/battle/: battle-arena-client.tsx  execution-loading.tsx  instruction-input.tsx  model-reveal.tsx  mujoco-viewer.tsx  response-card.tsx  vote-button.tsx  voting-panel.tsx
frontend/components/leaderboard/: leaderboard-client.tsx
frontend/components/sidebar/: session-item.tsx  session-list.tsx
frontend/lib/api/: client.ts  types.ts
frontend/lib/mujoco/: mujoco_wasm.js  types.ts
frontend/public/: mujoco-loader.js
shared/: pyproject.toml
shared/src/vlaarena_shared/: __init__.py  config.py  database.py  logging_config.py  models.py  mongodb.py  mongodb_models.py  mujoco_xml.py  schemas.py
shared/tests/: __init__.py  conftest.py  test_mongodb_connection.py  test_mongodb_models.py  test_mujoco_xml.py  test_schemas.py
tests/: conftest.py
tests/integration/: README.md  test_backend_vla_integration.py  test_multi_service.py
vla-server/: .env.example  .gitignore  README.md  pyproject.toml
vla-server-base/: pyproject.toml
vla-server-base/src/vla_server_base/: __init__.py  app_factory.py  schemas.py
vla-server-base/src/vla_server_base/adapters/: __init__.py  base.py
vla-server-base/src/vla_server_base/config/: __init__.py  model_loader.py
vla-server-base/src/vla_server_base/services/: __init__.py  episode_executor.py  mujoco_env.py
vla-server-base/tests/: test_app_factory.py  test_episode_executor.py  test_model_loader.py  test_mujoco_env.py
vla-server/src/vla_server/: __init__.py  config.py  main.py
vla-server/src/vla_server/adapters/: __init__.py  base.py  mock_adapter.py  octo_small_adapter.py
vla-server/src/vla_server/api/: __init__.py
vla-server/src/vla_server/config/: __init__.py  settings.py
vla-server/src/vla_server/schemas/: __init__.py  execute.py
vla-server/src/vla_server/services/: __init__.py  execution_service.py  mujoco_env.py  vla_model.py
vla-server/src/vla_server/utils/: __init__.py
vla-server/tests/: conftest.py  test_adapters.py  test_execution_service.py  test_main.py  test_model_loader.py  test_mujoco_env.py  test_vla_model.py
vla-servers/mock/: pyproject.toml
vla-servers/mock/src/vla_mock/: __init__.py  main.py
vla-servers/mock/src/vla_mock/adapters/: __init__.py  mock_adapter.py
vla-servers/mock/tests/: test_mock_adapter.py
vla-servers/octo-small/: .gitignore  README.md  pyproject.toml
vla-servers/octo-small/src/octo_service/: __init__.py  main.py
vla-servers/octo-small/src/octo_service/adapters/: __init__.py  octo_small_adapter.py
vla-servers/octo-small/tests/: conftest.py  test_octo_adapter.py
worker/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
worker/src/vlaarena_worker/: __init__.py  database.py  logging_config.py  main.py
worker/src/vlaarena_worker/aggregators/: __init__.py  elo_aggregator.py  elo_calculator.py
worker/tests/: conftest.py  test_database.py  test_elo_aggregator.py  test_elo_aggregator_simple.py  test_elo_calculator.py  test_logging.py  test_main.py  test_main_error_handling.py  test_worker_main.py
