[project]
name = "vlaarena"
version = "0.1.0"
description = "AI Language Model Battle Arena - Workspace Root"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    # Linting & Formatting
    "ruff>=0.9.2",
    # Test Database & Async Support
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "mongomock-motor>=0.0.36",
]

[tool.uv.workspace]
members = [
    "backend",
 "worker",
 "shared",
 "vla-server",
]

[tool.uv.sources]
vlaarena-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
exclude = [
    "backend/alembic/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # line too long
    "B008",   # function call in argument defaults (For FastAPI)
]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore Pydantic v2.11 deprecation warnings (will be fixed in Beanie/dependencies)
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
]

