[project]
name = "vlaarena-shared"
version = "0.1.0"
description = "Shared models, schemas, and config for vlaarena"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel>=0.0.22",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "beanie>=2.0.0",
    "motor>=3.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:beanie.*",
    "ignore::DeprecationWarning:lazy_model.*",
]
