[project]
name = "vla-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WooSeong Chung", email = "jungyh0528@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "fastapi>=0.119.1",
    "mujoco>=3.3.7",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
