[project]
name = "vlaarena-worker"
version = "0.1.0"
description = "Data aggregation worker for vlaarena"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "apscheduler>=3.11.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "vlaarena-shared",
    "sqlalchemy>=2.0.44",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
