[project]
name = "vla-mock"
version = "0.1.0"
description = "Mock VLA service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "vla-server-base",
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_mock"]

[tool.uv.sources]
vla-server-base = { path = "../../vla-server-base", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
