[project]
name = "vla-octo-small"
version = "0.1.0"
description = "Octo-Small VLA service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "vla-server-base",
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
    "jax[cpu]>=0.4.20",
    "tensorflow>=2.20.0",
    "pillow>=12.0.0",
    "octo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octo_service"]

[tool.uv.sources]
vla-server-base = { path = "../../vla-server-base", editable = true }
octo = { git = "https://github.com/octo-models/octo.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
