[project]
name = "vla-octo-small"
version = "0.1.0"
description = "Octo-Small VLA service"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "vla-server-base",
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
    # Platform-specific TensorFlow
    "tensorflow-macos==2.15.0; sys_platform == 'darwin'",
    "tensorflow==2.15.0; sys_platform != 'darwin'",
    "pillow>=12.0.0",
    "octo",
    "gym>=0.26",
    "numpy==1.24.3",
    "ml-dtypes==0.2.0",
    "chex==0.1.85",
    "flax==0.7.5",
    "optax==0.1.5",
    "tensorflow-probability==0.23.0",
    "distrax==0.1.5",
    "ml-collections>=0.1.0",
    "tensorflow-hub>=0.14.0",
    "dlimp",
    "scipy>=1.6.0,<1.13.0",
    "transformers>=4.34.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octo_service"]

[project.optional-dependencies]
cpu = [
    "jax==0.4.20",
]
cuda11 = [
    "jax[cuda11_pip]==0.4.20; sys_platform == 'linux'",
]

[tool.uv.sources]
vla-server-base = { path = "../../vla-server-base", editable = true }
octo = { git = "https://github.com/octo-models/octo.git" }
dlimp = { git = "https://github.com/kvablack/dlimp.git", rev = "5edaa4691567873d495633f2708982b42edf1972" }

[tool.uv]
find-links = [
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html",
]
conflicts = [
    [
      { extra = "cpu" },
      { extra = "cuda11" },
    ],
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
]
